# design-patterns

rust/: Cargo.toml
typescript/behavioral-patterns/: chain-of-responsibility.js  chain-of-responsibility.ts
typescript/creation-patterns/: abstract-factory.js  abstract-factory.ts  builder.js  builder.ts  factory.js  factory.ts  prototype.js  prototype.ts  singleton.js  singleton.ts
typescript/structual-patterns/: adapter.js  bridge.js  bridge.ts  composite.js  composite.ts  decorator.js  decorator.ts  facade.js  proxy.js  proxy.ts
