[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "factory"
path = "src/bin/creation-patterns/factory.rs"

[[bin]]
name = "abstract-factory"
path = "src/bin/creation-patterns/abstract-factory.rs"

[[bin]]
name = "builder"
path = "src/bin/creation-patterns/builder.rs"

[[bin]]
name = "prototype"
path = "src/bin/creation-patterns/prototype.rs"

[[bin]]
name = "singleton"
path = "src/bin/creation-patterns/singleton.rs"

[[bin]]
name = "adapter"
path = "src/bin/structual-patterns/adapter.rs"

[[bin]]
name = "bridge"
path = "src/bin/structual-patterns/bridge.rs"

[[bin]]
name = "composite"
path = "src/bin/structual-patterns/composite.rs"

[[bin]]
name = "decorator"
path = "src/bin/structual-patterns/decorator.rs"

[[bin]]
name = "facade"
path = "src/bin/structual-patterns/facade.rs"

[[bin]]
name = "proxy"
path = "src/bin/structual-patterns/proxy.rs"

[[bin]]
name = "chain-of-responsibility"
path = "src/bin/behavioral-patterns/chain-of-responsibility.rs"

[dependencies]
